# type-sig

./: Cargo.toml  LICENSE  README.md
crates/type-sig/: Cargo.toml
crates/type-sig-proc-macro/: Cargo.toml
crates/type-sig-proc-macro/src/: lib.rs
crates/type-sig-type/: Cargo.toml
crates/type-sig-type/src/: lib.rs
crates/type-sig/src/: lib.rs
