[workspace]
resolver = "2"
members = [
  "crates/type-sig",
  "crates/type-sig-type",
  "crates/type-sig-proc-macro",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Dimitriy \"ay0ks\" <ay0o0ks000@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ay0ks/type-sig"