[package]
name = "type-sig-proc-macro"
description = "type-sig: Internal crate that defines the procedural macro, don't use this directly."
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
type-sig-type = "0.1.2"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0.92"

[lib]
proc-macro = true