[package]
name = "type-sig"
description = "Ever needed to inspect types more precisely? Then this crate is for you!"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
type-sig-proc-macro = "0.1.3"
type-sig-type = "0.1.3"